docs: adds TODO

--- a/notebook/audio_classification.ipynb
+++ b/notebook/audio_classification.ipynb
@@ -1473,10 +1473,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5efb175f-bad6-44f2-afc7-343d2ee94549",
+   "id": "288e3f9d-8a89-4a19-9469-9a214a392ce7",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28397606-a1e6-4afb-85ae-805ad9bb130a",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "e8b43971-f40d-4781-9720-702f49314912",
+   "metadata": {},
+   "source": [
+    "# TODO: \n",
+    " - Añadir visualización de entrenamiento mediante tensorboard (o equivalente)\n",
+    " - Guardar modelo\n",
+    " - Añadir demo con audios fuera del dataset"
+   ]
   }
  ],
  "metadata": {
